--- a/tuesday-work.ipynb
+++ b/tuesday-work.ipynb
@@ -1009,6 +1009,35 @@
     "my_dict.popitem()\n",
     "my_dict"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 0\n",
+    "while x < 10:\n",
+    "    x = 1 + x\n",
+    "    print(x)"
+   ]
   }
  ],
  "metadata": {
